--- a/Earthquakes_past7days/index.html
+++ b/Earthquakes_past7days/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mapping_GeoJSON_Polygons</title>
+    <title>Earthquakes_past7days</title>
 <!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" 
 integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -25,6 +25,6 @@ crossorigin=""></script>
 <!-- API key -->
 <script type="text/javascript" src="static/js/config.js"></script>
 <!-- Our JavaScript -->
-<script type="text/javascript" src="static/js/logic.js"></script>   
+<script type="text/javascript" src="static/js/logicStep1.js"></script>   
 </body>
 </html>
